validação no proprio campo

--- a/13-form-handling-6/index.html
+++ b/13-form-handling-6/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="./public/semantic.min.css" />
-    <title>06_Data_Input_Multi</title>
+    <title>06_Data_Input_validation</title>
     <style>
       .ui.container {
         margin: 20px 0;
